k8s/ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-v1
spec:
  selector:
    app: echoserver-v1
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
