k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-v1
spec:
  ingressClassName: external-nginx
  rules:
  - host: ons.zapto.org
    http:
      paths:
      - pathType: Exact
        path: /
        backend:
          service:
            name: echoserver-v1
            port: 
              number: 8080
